--- a/src/pages/about/friendships_photo/friendships_photo.module.css
+++ b/src/pages/about/friendships_photo/friendships_photo.module.css
@@ -189,10 +189,3 @@
   left: -5.6%;
   bottom: 0;
 }
-
-@media(min-width: breakpointSmall) {
-
-  .friendshipsPhotoContainer {
-    width: 65%;
-  }
-}
